# syn

./: .gitignore  Cargo.toml
src/: generics.rs  item.rs
tests/: test_generics.rs
tests/debug/: gen.rs
